<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rootView"
        tools:context=".weather.WeatherActivity">

    <android.support.v7.widget.Toolbar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0">

    </android.support.v7.widget.Toolbar>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/clearsky_day"
            android:id="@+id/iv_weather"
            android:contentDescription="@string/todo"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/_25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_temperature"
            android:textSize="50sp"
            android:textColor="#000000"
            android:fontFamily="sans-serif-condensed"
            app:layout_constraintStart_toStartOf="@+id/tv_cityName"
            android:layout_marginBottom="108dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tv_cityName"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_celsius"
            android:textSize="50sp"
            android:text="@string/c"
            android:fontFamily="sans-serif-condensed"
            android:textColor="#000000"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_temperature" android:layout_marginEnd="228dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/tv_temperature"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"/>

    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.5"/>
    <TextView
            android:text="@string/scattered_clouds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/tv_desc"
            android:fontFamily="sans-serif-condensed"
            app:layout_constraintStart_toStartOf="@+id/tv_temperature" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_celsius" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_temperature"
            app:layout_constraintHorizontal_bias="0.0"
    />
    <TextView
            android:text="@string/yangon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_cityName"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-condensed"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.081"
            android:layout_marginTop="56dp" app:layout_constraintTop_toTopOf="@+id/guideline"
    />
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>


    <android.support.constraint.Group
            android:id="@+id/groupdata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
    app:constraint_referenced_ids="tv_cityName,tv_desc,tv_celsius,tv_temperature,
    iv_weather,toolbar,text_humidity,tv_humidity"/>
    <TextView
            android:text="@string/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed"
            android:id="@+id/text_humidity"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_humidity"
            app:layout_constraintStart_toStartOf="@+id/tv_desc"/>
    <TextView
            android:text="@string/_80"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textSize="20sp"
            android:id="@+id/tv_humidity"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/text_humidity"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.017"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tv_desc"
            app:layout_constraintVertical_bias="0.257"/>

</android.support.constraint.ConstraintLayout>